# desktus

./: Cargo.toml  LICENSE  README.md
src/: block.rs  event.rs  lib.rs  main.rs  pretty.rs  serialize.rs  sources.rs  util.rs  views.rs
src/sources/: battery.rs  brightness.rs  cpu.rs  disk.rs  memory.rs
src/views/: battery.rs  brightness.rs  cpu.rs  date.rs  disk.rs  memory.rs  time.rs
