[package]
name = "desktus"
version = "0.5.0"
authors = ["Stephane Raux <stephaneyfx@gmail.com>"]
edition = "2021"
description = "Desktop status bar client for i3bar and swaybar"
license = "0BSD"
homepage = "https://github.com/stephaneyfx/desktus"
repository = "https://github.com/stephaneyfx/desktus.git"
keywords = ["status", "bar", "i3bar", "i3"]

[dependencies]
battery = "0.7.8"
brightness = "0.4.0"
chrono = "0.4.19"
futures = "0.3.19"
number_prefix = "0.4.0"
palette = "0.6.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
sysinfo = "0.23.0"
tokio = { version = "1.16.0", features = ["full"] }
