[package]
name = "desktus"
version = "0.5.0"
authors = ["Stephane Raux <stephaneyfx@gmail.com>"]
edition = "2021"
description = "Desktop status bar client for i3bar and swaybar"
license = "0BSD"
homepage = "https://github.com/stephaneyfx/desktus"
repository = "https://github.com/stephaneyfx/desktus.git"
keywords = ["status", "bar", "i3bar", "i3"]

[dependencies]
base64 = "0.13.0"
battery = "0.7.8"
bincode = "1.3.3"
brightness = "0.4.1"
chrono = "0.4.19"
futures = "0.3.21"
futuristic = "0.4.0"
number_prefix = "0.4.0"
palette = "0.6.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sysinfo = "0.23.4"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["full"] }
tokio-stream = { version = "0.1.8", features = ["io-util", "time"] }
