[package]
name = "desktus"
version = "0.6.0"
authors = ["Stephane Raux <stephaneyfx@gmail.com>"]
edition = "2021"
description = "Tools to build a status bar client for i3bar and swaybar"
license = "0BSD"
homepage = "https://github.com/stephaneyfx/desktus"
repository = "https://github.com/stephaneyfx/desktus.git"
keywords = ["status", "bar", "i3bar", "i3"]

[dependencies]
base64 = "0.13.0"
battery = "0.7.8"
bincode = "1.3.3"
brightness = "0.5.0"
chrono = "0.4.22"
futures = "0.3.24"
number_prefix = "0.4.0"
palette = "0.6.1"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
sysinfo = "0.26.2"
thiserror = "1.0.35"
tokio = { version = "1.21.1", features = ["full"] }
tokio-stream = { version = "0.1.10", features = ["io-util", "sync", "time"] }
